Fixed overflowing issues

--- a/src/App.css
+++ b/src/App.css
@@ -25,5 +25,7 @@ a{
 
 html{
   font-family: Poppins, "Segoe UI", sans-serif;
+  overflow-x:hidden;
 }
+
 
